# Automation

Gen-code/nextest_cgen-r4-0a-pre47/iServer/: Makefile  env.csh  env.sh  global.mk  setup
Gen-code/nextest_cgen-r4-0a-pre47/iServer/CVS/: Entries
Gen-code/nextest_cgen-r4-0a-pre47/iServer/avl-1.4.0/: ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile.orig  README  avl-test.c  avl.c  avl.h  avl.info  avl.texinfo  avlt-test.c  avlt.c  avlt.h  avltr-test.c  avltr.c  avltr.h  configure  configure.in  mkinstalldirs  rb-test.c  rb.c  rb.h  thread-test.c
Gen-code/nextest_cgen-r4-0a-pre47/iServer/avl-1.4.0/CVS/: Entries  Repository
Gen-code/nextest_cgen-r4-0a-pre47/iServer/bridge/: Makefile  bridge.h  bridgefw.c  bridgeh323.c  bridgesip.c  bridgeutils.c
Gen-code/nextest_cgen-r4-0a-pre47/iServer/cgen/: Makefile  cgen.c  cgen.h  config-template.val  cv.h  finwait.c  gen_menu  handles.c  invite.c  ixia.c  ixia.h  mgen.c  mgen.h  register.c  rtptestc.c  sgen.c  sgen.h  sgenstubs.c  trace.h  uabridge.c  vars.c
Gen-code/nextest_cgen-r4-0a-pre47/iServer/cli/: ALUI_AppInit.c  ALUI_Commands.c  ALUI_Commands.h  Makefile  Makefile.sun  README  aloid.tk  alui_commands.c  cli.c  cli.h  cli_rpc.x  cli_rpc_cache_client.c  cli_rpc_clnt.c  cli_rpc_xdr.c  cliaux.c  clicache.c  clicmdhist.h  clicp.c  clidb.c  cliext.c  clifaxs.c  cligisq.c  cligk.c  cligkcall.c  cliigrp.c  clilog.c  clinetoid.c  cliphonefunc.c  clirealm.c  clirsd.c  clitrigger.c  cliusage.c  clivnet.c  clivpn.c  cliwrapper.c  main.c  one.l  one.y  parse.c
Gen-code/nextest_cgen-r4-0a-pre47/iServer/common/: Makefile  Makefile.sun  args.c  codemap.c  codemap_001.txt  codemap_002.txt  codemap_003.txt  codemap_004.txt  codemap_005.txt  codemap_006.txt  codemap_007.txt  codemap_008.txt  codemap_009.txt  codemap_010.txt  codemap_011.txt  codemap_012.txt  codemap_013.txt  codemap_014.txt  codemap_015.txt  codemap_016.txt  conn.c  example.c  fdsets.c  fileutils.c  get_ifi_info.c  icmpd.c  ifconf.c  ifs.c  ipcerror.c  ipcutils.c  itimer.c  license.c  list.c  lm_gethwaddr.c  lm_utils.c  lm_verify.c  packets.c  pef.c  phonode.c  pids.c  (+17 more)
Gen-code/nextest_cgen-r4-0a-pre47/iServer/crypto/: Makefile  date.h  (+5 more)
Gen-code/nextest_cgen-r4-0a-pre47/iServer/osd/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
Gen-code/nextest_cgen-r4-0a-pre47/iServer/osd/CVS/: Entries
Gen-code/nextest_cgen-r4-0a-pre47/iServer/osd/config/: ac_c_gethostbyname_r.m4  ac_c_getrpcbyname_r.m4  ax_prefix_config_h.m4  mkinstalldirs
Gen-code/nextest_cgen-r4-0a-pre47/iServer/osd/config/CVS/: Entries  Repository
Gen-code/nextest_cgen-r4-0a-pre47/iServer/osd/include/: nx_mkdirp.h  nxioctl.h  nxosd.h  nxosdtypes.h  osdconfig.h.in  tmpconfig.h.in
Gen-code/nextest_cgen-r4-0a-pre47/iServer/osd/include/CVS/: Entries  Repository
Gen-code/nextest_cgen-r4-0a-pre47/iServer/osd/src/: Makefile.am  Makefile.in  nx_gethostbyname_r.c  nx_gethrtime.c  nx_getrpcbyname_r.c  nx_mkdirp.c  nx_sig2str.c  nx_strlcat.c  nx_strlcpy.c  nx_thread_set_rt.c
Gen-code/nextest_cgen-r4-0a-pre47/iServer/osd/src/CVS/: Entries  Repository
Gen-code/nextest_cgen-r4-0a-pre47/iServer/osd/tests/: Makefile.am  Makefile.in  check_osd.c
Gen-code/nextest_cgen-r4-0a-pre47/iServer/osd/tests/CVS/: Entries  Repository
Gen-code/nextest_cgen-r4-0a-pre47/iServer/tst1.3/: Makefile  Makefile.in  configure  configure.in  mkinstalldirs  tst.h  tst.tex  tst_cleanup.8  tst_cleanup.c  tst_delete.8  tst_delete.c  tst_grow_node_free_list.c  tst_init.8  tst_init.c  tst_insert.8  tst_insert.c  tst_iterator.h  tst_match_set.c  tst_search.8  tst_search.c  tst_walk.c  tstpriv.h
Gen-code/nextest_cgen-r4-0a-pre47/iServer/tst1.3/CVS/: Entries  Repository
Gen-code/nextest_cgen-r4-0a-pre47/iServer/tst1.3/cweb_sources/: tst.w  tst_delete.w  tst_insert.w  tst_search.w
Gen-code/nextest_cgen-r4-0a-pre47/iServer/tst1.3/cweb_sources/CVS/: Entries  Repository
(+2407 files in other folders)
