lib_LIBRARIES           = libosd.a
libosd_a_SOURCES        = nx_gethostbyname_r.c nx_strlcpy.c \
                          nx_gethrtime.c nx_sig2str.c nx_strlcat.c \
                          nx_getrpcbyname_r.c nx_mkdirp.c \
                          nx_thread_set_rt.c  
INCLUDES= -I$(top_builddir)/include -I$(top_srcdir)/include
